## ----------------------------------------------------------------------- ##
## Version 0.1.8
## ----------------------------------------------------------------------- ##
- Fix problems when using Rcpp <0.11.4

## ----------------------------------------------------------------------- ##
## Version 0.1.7
## ----------------------------------------------------------------------- ##
- Add option to split on unordered categorical covariates

## ----------------------------------------------------------------------- ##
## Version 0.1.6
## ----------------------------------------------------------------------- ##
- Optimize memory management for very large survival forests

## ----------------------------------------------------------------------- ##
## Version 0.1.5
## ----------------------------------------------------------------------- ##
- Set required Rcpp version to 0.11.2
- Fix large $call objects when using BatchJobs
- Add details and example on GenABEL usage to documentation
- Minor changes to documentation

## ----------------------------------------------------------------------- ##
## Version 0.1.4
## ----------------------------------------------------------------------- ##
- Speedup for survival forests with continuous covariates
- R version: Generate seed from R. It is no longer necessary to set the
  seed argument in ranger calls.

## ----------------------------------------------------------------------- ##
## Version 0.1.3
## ----------------------------------------------------------------------- ##
- Windows support for R version (without multithreading)

## ----------------------------------------------------------------------- ##
## Version 0.1.2
## ----------------------------------------------------------------------- ##
- Speedup growing of regression and probability prediction forests
- Prediction forests are now handled like regression forests: MSE used for
	prediction error and permutation importance