@@ -1,7 +1,7 @@
 Package: ranger
 Type: Package
 Title: A fast implementation of Random Forests
-Version: 0.1.8
+Version: 0.1.9.95
 Date: 2015-04-07
 Author: Marvin N. Wright
 Maintainer: Marvin N. Wright <wright@imbs.uni-luebeck.de>
