@@ -1,3 +1,3 @@
 #ifndef RANGER_VERSION
-#define RANGER_VERSION "0.1.8"
+#define RANGER_VERSION "0.1.9.95"
 #endif
