@@ -1,4 +1,9 @@
 ## ----------------------------------------------------------------------- ##
+## Next version
+## ----------------------------------------------------------------------- ##
+- Remove memory mode option from R version since no performance gain
+
+## ----------------------------------------------------------------------- ##
 ## Version 0.1.8
 ## ----------------------------------------------------------------------- ##
 - Fix problems when using Rcpp <0.11.4
